modify boot config