@@ -8,7 +8,7 @@ readonly PID_FILE="$LOGS_HOME/application.pid"
 readonly APP_MAIN_CLASS="jshERP.jar"
 readonly LOG_CONFIG="$CONFIG_HOME/logback-spring.xml"
 readonly JAVA_RUN="-Dlogs.home=$LOGS_HOME -Dlogging.config=$LOG_CONFIG -Dspring.config.location=file:$CONFIG_HOME -Dspring.pid.file=$PID_FILE -Dspring.pid.fail-on-write-error=true"
-readonly JAVA_OPTS="-server -Xms128m -Xmx320m -XX:PermSize=128M -XX:MaxPermSize=256M $JAVA_RUN"
+readonly JAVA_OPTS="-server -Xms128m -Xmx320m $JAVA_RUN"
 readonly JAVA="java"
 PID=0
 if [ ! -x "$LOGS_HOME" ]
